# Programming

./: README.md
C++/: .gitignore  create_cpp_project.sh
C++/Constant/: main  main.cpp
C++/Create_Folder/: clean_project.sh  main.cpp
C++/DBM/: .gitignore  CMakeLists.txt  clear_vtk.sh  main.cpp
C++/DBM_3d/: CMakeLists.txt
C++/DBM_3d/src/: main.cpp
C++/DBM_3d/src/dbm/: CMakeLists.txt  cell.cpp  cell.h  dbm.cpp  dbm.h  grid.cpp  grid.h
C++/DBM_3d/src/utils/: utils.cpp  utils.h
C++/DLA/: main.cpp
C++/Design-Patterns-in-C++/: notes.md
C++/Design-Patterns-in-C++/Adapter/: CMakeLists.txt
C++/Design-Patterns-in-C++/Adapter/src/: main.cpp
C++/Design-Patterns-in-C++/Adapter/src/ducks/: CMakeLists.txt  duck.cpp  duck.h  turkey.cpp  turkey.h
C++/Design-Patterns-in-C++/Chapter_1/Ducks/: CMakeLists.txt
C++/Design-Patterns-in-C++/Chapter_1/Ducks/src/: main.cpp
C++/Design-Patterns-in-C++/Chapter_1/Ducks/src/ducks/: behaviour.h  duck.cpp
C++/Design-Patterns-in-C++/Command/: CMakeLists.txt
C++/Design-Patterns-in-C++/Command/src/: main.cpp
C++/Design-Patterns-in-C++/Command/src/devices/: CMakeLists.txt  command.h
C++/Design-Patterns-in-C++/Command/src/devices/ceiling_fan/: ceiling_fan.cpp  ceiling_fan.h
C++/Design-Patterns-in-C++/Command/src/devices/garage_door/: garage_door.cpp  garage_door.h
C++/Design-Patterns-in-C++/Command/src/devices/light/: light.h
C++/Design-Patterns-in-C++/Command/src/devices/remote/: remote.cpp  remote.h
C++/Design-Patterns-in-C++/Command/src/devices/stereo/: stereo.cpp  stereo.h
C++/Design-Patterns-in-C++/Command/src/devices/stereo/cds/: iron_maiden.txt  metallica.txt
C++/Design-Patterns-in-C++/Decorator/: CMakeLists.txt
C++/Design-Patterns-in-C++/Decorator/src/: main.cpp
C++/Design-Patterns-in-C++/Decorator/src/starbuzz/: CMakeLists.txt  beverage.cpp  beverage.h  condiment.cpp  condiment.h
C++/Design-Patterns-in-C++/Facade/: CMakeLists.txt
C++/Design-Patterns-in-C++/Facade/src/: main.cpp
C++/Design-Patterns-in-C++/Facade/src/home_theater/: CMakeLists.txt  home_theater.cpp  home_theater.h
C++/Design-Patterns-in-C++/Facade/src/home_theater/lights/: CMakeLists.txt  light.cpp  light.h
C++/Design-Patterns-in-C++/Facade/src/home_theater/players/: CMakeLists.txt  amplifier.cpp  amplifier.h  cd_player.cpp  cd_player.h  dvd_player.cpp  dvd_player.h
C++/Design-Patterns-in-C++/Facade/src/home_theater/popcorn/: CMakeLists.txt  popcorn.cpp  popcorn.h
C++/Design-Patterns-in-C++/Facade/src/home_theater/screen/: CMakeLists.txt  screen.cpp  screen.h
C++/Design-Patterns-in-C++/Factory/: CMakeLists.txt
C++/Design-Patterns-in-C++/Factory/src/: main.cpp
C++/Design-Patterns-in-C++/Factory/src/pizza/: CMakeLists.txt  ingredient.cpp  ingredient.h  pizza.cpp  pizza.h  store.cpp  store.h
C++/Design-Patterns-in-C++/Iterator/: CMakeLists.txt
C++/Design-Patterns-in-C++/Iterator/src/: main.cpp
C++/Design-Patterns-in-C++/Iterator/src/menu/: CMakeLists.txt  diner.cpp  diner.h  item.h  iterator.cpp  iterator.h  pancake.cpp  pancake.h  waitress.cpp  waitress.h
C++/Design-Patterns-in-C++/Observer/: CMakeLists.txt
C++/Design-Patterns-in-C++/Observer/src/: main.cpp
C++/Design-Patterns-in-C++/Observer/src/utils/: utils.cpp  utils.h
C++/Design-Patterns-in-C++/Observer/src/weather/: CMakeLists.txt  observer.h  weather.cpp  weather.h
C++/Design-Patterns-in-C++/Singleton/: CMakeLists.txt
C++/Design-Patterns-in-C++/Singleton/src/: main.cpp
C++/Design-Patterns-in-C++/Singleton/src/chocolate/: CMakeLists.txt  boiler.cpp  boiler.h
C++/Design-Patterns-in-C++/Template/: CMakeLists.txt
C++/Design-Patterns-in-C++/Template/src/: main.cpp
C++/Design-Patterns-in-C++/Template/src/beverages/: CMakeLists.txt  beverage.cpp  beverage.h
C++/Design-Patterns-in-C++/Template/src/beverages/coffe/: coffe.cpp  coffe.h
C++/Design-Patterns-in-C++/Template/src/beverages/tea/: tea.cpp  tea.h
C++/Design-Patterns-in-C++/Template/src/utils/: utils.h
C++/Hello/: main.cpp
C++/Hexaedron-Numeration/: main  main.cpp
C++/Main/: main.cpp
C++/Neural-Networks/00-Perceptron/: CMakeLists.txt
C++/Neural-Networks/00-Perceptron/src/: main.cpp
C++/Neural-Networks/00-Perceptron/src/perceptron/: perceptron.cpp  perceptron.h  training.cpp  training.h
C++/Neural-Networks/00-Perceptron/src/utils/: utils.h
C++/Neural-Networks/Matrix-Library/: CMakeLists.txt
C++/Neural-Networks/Matrix-Library/src/: main.cpp
C++/Neural-Networks/Matrix-Library/src/matrix/: CMakeLists.txt  matrix.cpp  matrix.h
C++/Neural-Networks/Matrix-Library/src/utils/: utils.cpp  utils.h
C++/Neural-Networks/Multilayer-Perceptron/: CMakeLists.txt
C++/Neural-Networks/Multilayer-Perceptron/inputs/: training_set.txt
C++/Neural-Networks/Multilayer-Perceptron/scripts/: generate_training.py
C++/Neural-Networks/Multilayer-Perceptron/src/: main.cpp
C++/Neural-Networks/Multilayer-Perceptron/src/matrix/: matrix.cpp  matrix.h
C++/Neural-Networks/Multilayer-Perceptron/src/multilayer/: CMakeLists.txt  multilayer.cpp  multilayer.h  perceptron.h
C++/Neural-Networks/Multilayer-Perceptron/src/utils/: utils.cpp  utils.h
C++/Package/: CMakeLists.txt  run_valgrind.sh
C++/Pearson_Correlation/: main.cpp
C++/RMS/: main  main.cpp  output  output2  output3  output4
C++/RMSE_RRMSE/: main  main.cpp
C++/Shuffle/: CMakeLists.txt  main.cpp
C++/StopWatch/: CMakeLists.txt
C++/Suspend-Background/: main  main.cpp
C++/UniquePoints/: main.cpp
C++/UniqueTriangles/: main.cpp
C/Genealogy-Tree/: input  main.c  run_valgrind.sh
C/Graph/: CMakeLists.txt  run_valgrind.sh
C/Graph/src/: main.c
C/Graph/src/graph/: CMakeLists.txt  graph.c  graph.h
C/Increments/: main  main.c
C/Matrix-Diagonal/: main  main.c
C/Priority-Queue/: CMakeLists.txt
C/Priority-Queue/src/: main.c
C/Priority-Queue/src/queue/: CMakeLists.txt  pqueue.h
C/Recursion/: main  main.c
C/Stb-ds-Library/: CMakeLists.txt
Fortran/EulerMethod/: euler.f90  euler.f90~
Fortran/FunctionEval/: avalia_funcao.f90  avalia_funcao.f90~
Fortran/HelloWorld/: hello  (+2 more)
Python/: example_1.py  main.py
Rust/: README.md
(+343 files in other folders)
