cmake_minimum_required(VERSION 3.0.1)
project(DBM_3d)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared-libs)

ADD_SUBDIRECTORY(src/dbm)
ADD_SUBDIRECTORY(src/utils)

ADD_EXECUTABLE(DBM_3d src/main.cpp)

ADD_DEPENDENCIES(DBM_3d dbm utils)

TARGET_LINK_LIBRARIES(DBM_3d dbm utils dl m)
