cmake_minimum_required(VERSION 3.0.1)
project(Graph)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared-libs)

ADD_SUBDIRECTORY(src/graph)

ADD_EXECUTABLE(Graph src/main.c)

ADD_DEPENDENCIES(Graph graph)

TARGET_LINK_LIBRARIES(Graph graph dl m)
