cmake_minimum_required(VERSION 3.0.1)
project(Template)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shared-libs)

ADD_SUBDIRECTORY(src/utils)

ADD_EXECUTABLE(Template src/main.cpp)

ADD_DEPENDENCIES(Template utils)

TARGET_LINK_LIBRARIES(Template utils dl m)
